--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@angular/common": "~13.0.0",
     "@angular/core": "~13.0.0",
+    "@angular/flex-layout": "^13.0.0-beta.36",
     "@angular/forms": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
