--- a/.editorconfig
+++ b/.editorconfig
@@ -4,12 +4,15 @@ root = true
 [*]
 charset = utf-8
 indent_style = space
-indent_size = 2
+indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
+quote_type = single
+max_line_length = 140
 
 [*.ts]
 quote_type = single
+
 
 [*.md]
 max_line_length = off
