--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^6.0.0",
+    "@ionic/storage": "^3.0.6",
+    "@ionic/storage-angular": "^3.0.6",
     "rxjs": "~6.6.0",
     "swiper": "^7.4.1",
     "tslib": "^2.2.0",
